hphp/test/quick/redeclared_function.php.expectf
Fatal error: Cannot redeclare f() (previously declared in %s/test/quick/redeclared_function.php:4) in %s/test/quick/redeclared_function.php on line 6